--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = myspider.settings
+default = myspider.spider.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = myspider
+project = spider
